--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "@discordjs/rest": "^0.4.1",
     "discord-api-types": "^0.32.0",
     "discord.js": "^13.6.0",
-    "easy-json-database": "^1.5.0"
+    "easy-json-database": "^1.5.0",
+    "node-latex": "^3.1.0",
+    "node-pdftocairo": "^1.1.0"
   },
   "main": "index.js"
 }
