--- a/config.json.example
+++ b/config.json.example
@@ -7,5 +7,6 @@
   "ROLE_ADMIN": "L'id du rôle admin",
   "MAIN_ROLE": "L'id du rôle principal qui donne acces au serveur apres le 'rename'",
   "ONEROLE": ["role1","role2","role3"],
-  "info": "il faut le nom exacte du role, sinon ça marcheras pas"
+  "info": "il faut le nom exacte du role, sinon ça marcheras pas",
+  "REGLEMENT_CHANNEL": "L'id du salon où seront affiché les règles"
 }
