--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "discord-api-types": "^0.32.0",
     "discord.js": "^13.6.0",
     "easy-json-database": "^1.5.0",
+    "mathjs": "^10.5.3",
     "node-latex": "^3.1.0",
     "node-pdftocairo": "^1.1.0"
   },
