--- a/config.json.example
+++ b/config.json.example
@@ -5,6 +5,7 @@
   "LOGIN_CAT": "L'id de la catégorie où les salons de 'rename' seront créés",
   "ROLE_MOD": "L'id du rôle modérateur (pas admin)",
   "ROLE_ADMIN": "L'id du rôle admin",
+  "BOT_ROLE": "L'id du rôle pour les bots",
   "MAIN_ROLE": "L'id du rôle principal qui donne acces au serveur apres le 'rename'",
   "ONEROLE": ["role1","role2","role3"],
   "info": "il faut le nom exacte du role, sinon ça marcheras pas",
