--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "discord.js": "^13.6.0",
     "easy-json-database": "^1.5.0",
     "mathjs": "^10.5.3",
+    "node-cron": "^3.0.1",
     "node-latex": "^3.1.0",
-    "node-pdftocairo": "^1.1.0"
+    "node-pdftocairo": "^1.1.0",
+    "uuid": "^8.3.2"
   },
   "main": "index.js"
 }
