--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
     "@discordjs/rest": "^0.4.1",
     "discord-api-types": "^0.32.0",
     "discord.js": "^13.6.0",
-    "easy-json-database": "^1.5.0",
     "mathjs": "^10.5.3",
     "node-cron": "^3.0.1",
-    "node-latex": "^3.1.0",
-    "node-pdftocairo": "^1.1.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "quick.db": "^9.0.5",
+    "better-sqlite3": "^7.6.2"
   },
   "main": "index.js"
 }
